# hypothetical_national_champs

./: .gitignore  Makefile  PLAN.md  README.md  requirements.in  requirements.lock.txt  run.py
analysis/: postseason_results_analyzed.ipynb
db/cfb_data/ratings/sp/: 1999_2026.json
db/polls/ap/: ap_1999.csv  ap_2000.csv  ap_2001.csv  ap_2002.csv  ap_2003.csv  ap_2004.csv  ap_2005.csv  ap_2007.csv  ap_2009.csv  ap_2010.csv  ap_2011.csv  ap_2012.csv  ap_2013.csv  ap_2014.csv  ap_2015.csv  ap_2016.csv  ap_2017.csv  ap_2018.csv  ap_2019.csv  ap_2020.csv  ap_2021.csv  ap_2022.csv  ap_2023.csv  ap_2024.csv  ap_2025.csv
db/polls/bcs/: bcs_1999.csv  bcs_2000.csv  bcs_2002.csv  bcs_2003.csv  bcs_2004.csv  bcs_2005.csv  bcs_2006.csv  bcs_2007.csv  bcs_2008.csv  bcs_2009.csv  bcs_2010.csv  bcs_2011.csv  bcs_2012.csv  bcs_2013.csv
db/polls/cfp/: cfp_2014.csv  cfp_2015.csv  cfp_2016.csv  cfp_2017.csv  cfp_2018.csv  cfp_2019.csv  cfp_2020.csv  cfp_2021.csv  cfp_2022.csv  cfp_2023.csv  cfp_2024.csv  cfp_2025.csv
ingest/: README.md
ingest/ingest_college_football_data_api/: Makefile  README.md  requirements.lock.txt
ingest/ingest_college_football_data_api/ingest_college_football_ratings_api/: __main__.py  ingest_college_football_ratings_api.py
postseason_simulator/: __init__.py  deciders.py  formats.py  load_results.py  models.py  pyproject.toml  run_series.py  seed_postseason.py  simulator.py  team_mappings.py
postseason_simulator/tests/: test_seed_postseason.py  test_simulator.py
(+1 files in other folders)
