[project]
name = "postseason-simulator"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pandas",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.setuptools]
packages = ["postseason_simulator"]

[tool.setuptools.package-dir]
postseason_simulator = "."
